@@ -1,6 +1,8 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? Jun 2010, PHP 5.2.14
+- Fixed SplObjectStorage unserialization problems (CVE-2010-2225). (Stas)
+
 - Fixed bug #52163 (SplFileObject::fgetss() fails due to parameter that can't
   be set). (Felipe)
 - Fixed bug #52162 (custom request header variables with numbers are removed). 
